[project]
name = "agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.6",
    "fastapi>=0.135.2",
    "firebase-admin>=7.3.0",
    "mcp>=1.26.0",
    "openai>=2.30.0",
    "openai-agents>=0.13.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]
